<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:background="@color/colorAppTheme"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">-->

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/app_icon_desc"
        android:src="@drawable/app_icon" />

    <TextView
        android:id="@+id/txtAiPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtAIpersonCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="2dp"
        android:gravity="center"
        android:text="@string/app_version"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        android:textStyle="bold" />

    <!--</LinearLayout>-->

</LinearLayout>