<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/todayFragmentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".Activities.AddIncomExpenseActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <include
            android:id="@+id/headerView"
            layout="@layout/header_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/headerView"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycleTodaysData"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3.5"
                android:background="@color/colorWhite"></androidx.recyclerview.widget.RecyclerView>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".33"
                        android:background="@android:color/holo_green_light"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textIncome"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/total_income" />

                        <TextView
                            android:id="@+id/textIncomeAmount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".33"
                        android:background="@android:color/holo_red_light"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textExpense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/total_expense" />

                        <TextView
                            android:id="@+id/textExpenseAmount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".33"
                        android:background="@android:color/holo_blue_light"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textBalance"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/total_balance" />

                        <TextView
                            android:id="@+id/textBalanceAmount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center" />
                    </LinearLayout>
                </LinearLayout>

        </LinearLayout>



    </RelativeLayout>
</RelativeLayout>